// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout With Full Screen Panel 1`] = `
<main
  className="css-1ox8a0q-Layout"
>
  <div
    className="css-4ddx2x-Card"
  >
    <nav
      className="css-5tspew-Nav"
    >
      <button
        className="css-1ijr7ps-Item"
      >
        🐽
      </button>
      <button
        className="css-1ijr7ps-Item"
      >
        👨‍🌾
      </button>
      <button
        className="css-1ijr7ps-Item"
      >
        🐝
      </button>
    </nav>
  </div>
  <div
    className="css-neblj2-Layout"
  >
    <div
      className="css-uekhf3-Card"
    >
      <div
        className="css-e025bq-List"
      >
        <div
          className="css-6dhis2-ListRow"
        >
          Woooo
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-l9qndh-Layout"
  >
    <div
      className="css-nitczu-Card"
    >
      <div
        className="css-e025bq-List"
      >
        <div
          className="css-6dhis2-ListRow"
        >
          Input
        </div>
      </div>
    </div>
    <div
      className="css-nitczu-Card"
    >
      <div
        className="css-e025bq-List"
      >
        <div
          className="css-6dhis2-ListRow"
        >
          Response
        </div>
      </div>
    </div>
    <div
      className="css-1ayby34-Card"
    >
      <div
        className="css-e025bq-List"
      >
        <div
          className="css-6dhis2-ListRow"
        >
          Console/Inspector
        </div>
      </div>
    </div>
  </div>
</main>
`;

exports[`Storyshots Layout With Many Sidebars 1`] = `
<main
  className="css-1ox8a0q-Layout"
>
  <div
    className="css-4ddx2x-Card"
  >
    <nav
      className="css-5tspew-Nav"
    >
      <button
        className="css-1ijr7ps-Item"
      >
        🐽
      </button>
      <button
        className="css-1ijr7ps-Item"
      >
        👨‍🌾
      </button>
      <button
        className="css-1ijr7ps-Item"
      >
        🐝
      </button>
    </nav>
  </div>
  <div
    className="css-neblj2-Layout"
  >
    <div
      className="css-om1rsp-Card"
    >
      <div
        className="css-e025bq-List"
      >
        <div
          className="css-6dhis2-ListRow"
        >
          Sidebar
        </div>
      </div>
    </div>
    <div
      className="css-qlah9u-Card"
    >
      <div
        className="css-e025bq-List"
      >
        <div
          className="css-6dhis2-ListRow"
        >
          aside
        </div>
      </div>
    </div>
    <div
      className="css-qlah9u-Card"
    >
      <div
        className="css-e025bq-List"
      >
        <div
          className="css-6dhis2-ListRow"
        >
          Another aside
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-l9qndh-Layout"
  >
    <div
      className="css-nitczu-Card"
    >
      <div
        className="css-e025bq-List"
      >
        <div
          className="css-6dhis2-ListRow"
        >
          Input
        </div>
      </div>
    </div>
    <div
      className="css-nitczu-Card"
    >
      <div
        className="css-e025bq-List"
      >
        <div
          className="css-6dhis2-ListRow"
        >
          Response
        </div>
      </div>
    </div>
    <div
      className="css-1ayby34-Card"
    >
      <div
        className="css-e025bq-List"
      >
        <div
          className="css-6dhis2-ListRow"
        >
          Console/Inspector
        </div>
      </div>
    </div>
  </div>
</main>
`;

exports[`Storyshots Layout With Slots 1`] = `
<main
  className="css-1jafrk2-Layout"
>
  <div
    className="css-4ddx2x-Card"
  >
    <nav
      className="css-5tspew-Nav"
    >
      <button
        className="css-1ijr7ps-Item"
      >
        🐽
      </button>
      <button
        className="css-1ijr7ps-Item"
      >
        👨‍🌾
      </button>
      <button
        className="css-1ijr7ps-Item"
      >
        🐝
      </button>
    </nav>
  </div>
  <div
    className="css-l9qndh-Layout"
  >
    <div
      className="css-nitczu-Card"
    >
      <div
        className="css-e025bq-List"
      >
        <div
          className="css-6dhis2-ListRow"
        >
          Input
        </div>
      </div>
    </div>
    <div
      className="css-nitczu-Card"
    >
      <div
        className="css-e025bq-List"
      >
        <div
          className="css-6dhis2-ListRow"
        >
          Response
        </div>
      </div>
    </div>
    <div
      className="css-1ayby34-Card"
    >
      <div
        className="css-e025bq-List"
      >
        <div
          className="css-6dhis2-ListRow"
        >
          Console/Inspector
        </div>
      </div>
    </div>
  </div>
</main>
`;

exports[`Storyshots Layout With Strings Only 1`] = `
<main
  className="css-1ox8a0q-Layout"
>
  <div
    className="css-4ddx2x-Card"
  >
    nav
  </div>
  <div
    className="css-neblj2-Layout"
  >
    <div
      className="css-om1rsp-Card"
    >
      sidebar
    </div>
  </div>
  <div
    className="css-l9qndh-Layout"
  >
    <div
      className="css-nitczu-Card"
    >
      input
    </div>
    <div
      className="css-nitczu-Card"
    >
      response
    </div>
    <div
      className="css-1ayby34-Card"
    >
      console
    </div>
  </div>
</main>
`;

exports[`Storyshots Lists With Flex Child 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "height": "100vh",
    }
  }
>
  <div
    className="css-e025bq-List"
  >
    <div
      className="css-q8crt6-ListRow"
    >
      <div>
        Lists are a vertical stack of components and form the basis of most modules. This one is very long
      </div>
    </div>
    <div
      className="css-7bkyhc-ListRow"
    >
      You normally want 1 flex area that grows forever like this one
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      the end
    </div>
  </div>
</div>
`;

exports[`Storyshots Lists With Stacked Rows 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "height": "100vh",
    }
  }
>
  <div
    className="css-e025bq-List"
  >
    <div
      className="css-q8crt6-ListRow"
    >
      Title
    </div>
    <div
      className="css-q8crt6-ListRow"
    >
      Navigation
    </div>
    <div
      className="css-q8crt6-ListRow"
    >
      Search
    </div>
    <div
      className="css-q8crt6-ListRow"
    >
      Filter
    </div>
    <div
      className="css-7bkyhc-ListRow"
    >
      Actual content
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      <div>
        scroll
      </div>
      Actual content ends here
    </div>
    <div
      className="css-q8crt6-ListRow"
    >
      Footer
    </div>
    <div
      className="css-q8crt6-ListRow"
    >
      Footers footer
    </div>
  </div>
</div>
`;

exports[`Storyshots Tabbar Tabbar 1`] = `
<div
  style={
    Object {
      "border": "1px solid #eee",
      "margin": "5em auto",
      "maxWidth": "60em",
    }
  }
>
  <div
    className="css-e025bq-List"
  >
    <div
      className="css-6dhis2-ListRow"
    >
      <ul
        className="css-uydjkm-WithDividers"
        data-contains-divider={true}
      >
        <li
          className="css-tq0oo4"
        >
          <button
            className="css-141niuh-Tab"
            onClick={[Function]}
          >
            One
          </button>
        </li>
        <li
          className="css-tq0oo4"
        >
          <div
            aria-hidden={true}
            className="css-6aw4lc-Divider"
            data-is-divider={true}
          />
          <button
            className="css-8zi662-Tab"
            onClick={[Function]}
          >
            Two
          </button>
        </li>
        <li
          className="css-tq0oo4"
        >
          <div
            aria-hidden={true}
            className="css-6aw4lc-Divider"
            data-is-divider={true}
          />
          <button
            className="css-8zi662-Tab"
            onClick={[Function]}
          >
            Three
          </button>
        </li>
      </ul>
    </div>
    <div
      className="css-6dhis2-ListRow"
    >
      <ul
        className="css-uydjkm-WithDividers"
        data-contains-divider={true}
      >
        <li
          className="css-tq0oo4"
        >
          <button
            className="css-141niuh-Tab"
            onClick={[Function]}
          >
            With
          </button>
        </li>
        <li
          className="css-tq0oo4"
        >
          <div
            aria-hidden={true}
            className="css-6aw4lc-Divider"
            data-is-divider={true}
          />
          <button
            className="css-8zi662-Tab"
            onClick={[Function]}
          >
            a
          </button>
        </li>
        <li
          className="css-tq0oo4"
        >
          <div
            aria-hidden={true}
            className="css-6aw4lc-Divider"
            data-is-divider={true}
          />
          <button
            className="css-8zi662-Tab"
            onClick={[Function]}
          >
            nested
          </button>
        </li>
        <li
          className="css-tq0oo4"
        >
          <div
            aria-hidden={true}
            className="css-6aw4lc-Divider"
            data-is-divider={true}
          />
          <button
            className="css-8zi662-Tab"
            onClick={[Function]}
          >
            Component 
            <small
              style={
                Object {
                  "background": "yellow",
                  "padding": 3,
                }
              }
            >
              2
            </small>
          </button>
        </li>
      </ul>
    </div>
    <div
      className="css-crkf2n-ListRow"
    >
      <div
        style={
          Object {
            "display": "grid",
            "height": "100px",
          }
        }
      >
        <ul
          className="css-uydjkm-WithDividers"
          data-contains-divider={true}
        >
          <li
            className="css-tq0oo4"
          >
            <button
              className="css-141niuh-Tab"
              onClick={[Function]}
            >
              Very tall
            </button>
          </li>
          <li
            className="css-tq0oo4"
          >
            <div
              aria-hidden={true}
              className="css-6aw4lc-Divider"
              data-is-divider={true}
            />
            <button
              className="css-8zi662-Tab"
              onClick={[Function]}
            >
              tabs
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toolbar Basic 1`] = `
<div
  style={
    Object {
      "border": "1px solid #eee",
      "margin": "5em auto",
      "maxWidth": "60em",
    }
  }
>
  <div
    className="css-e025bq-List"
  >
    <div
      className="css-q8crt6-ListRow"
    >
      <p>
        Toolbars group together widgets in a flexbox. You can cutomize what type of
      justification to use and if elements go together it'll add dividers
      between them
      </p>
    </div>
    <div
      className="css-6dhis2-ListRow"
    >
      <div
        className="css-1ae10t4-Toolbar"
      >
        <ul
          className="css-uydjkm-WithDividers"
          data-contains-divider={true}
        >
          <li
            className="css-tq0oo4"
          >
            <div
              className="css-ungdc8-Content"
            >
              Some text
            </div>
          </li>
          <li
            className="css-1t44jqq"
          >
            <div
              aria-hidden={true}
              className="css-u594xb-Divider"
              data-is-divider={true}
            />
            <div
              className="css-ungdc8-Content"
            >
              Some text
            </div>
          </li>
          <li
            className="css-1t44jqq"
          >
            <div
              aria-hidden={true}
              className="css-u594xb-Divider"
              data-is-divider={true}
            />
            <div
              className="css-ungdc8-Content"
            >
              Some text
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="css-6dhis2-ListRow"
    >
      <div
        className="css-yyqua-Toolbar"
      >
        <ul
          className="css-uydjkm-WithDividers"
          data-contains-divider={true}
        >
          <li
            className="css-tq0oo4"
          >
            <div
              className="css-ungdc8-Content"
            >
              Some text
            </div>
          </li>
          <li
            className="css-1t44jqq"
          >
            <div
              aria-hidden={true}
              className="css-u594xb-Divider"
              data-is-divider={true}
            />
            <div
              className="css-ungdc8-Content"
            >
              Some text
            </div>
          </li>
          <li
            className="css-1t44jqq"
          >
            <div
              aria-hidden={true}
              className="css-u594xb-Divider"
              data-is-divider={true}
            />
            <div
              className="css-ungdc8-Content"
            >
              Some text
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="css-6dhis2-ListRow"
    >
      <div
        className="css-1s856wh-Toolbar"
      >
        <ul
          className="css-uydjkm-WithDividers"
          data-contains-divider={true}
        >
          <li
            className="css-tq0oo4"
          >
            <div
              className="css-ungdc8-Content"
            >
              Some text
            </div>
          </li>
          <li
            className="css-1t44jqq"
          >
            <div
              aria-hidden={true}
              className="css-u594xb-Divider"
              data-is-divider={true}
            />
            <div
              className="css-ungdc8-Content"
            >
              Some text
            </div>
          </li>
          <li
            className="css-1t44jqq"
          >
            <div
              aria-hidden={true}
              className="css-u594xb-Divider"
              data-is-divider={true}
            />
            <div
              className="css-ungdc8-Content"
            >
              Some text
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="css-6dhis2-ListRow"
    >
      <div
        className="css-1ycjblk-Toolbar"
      >
        <div
          className="css-ungdc8-Content"
        >
          Some text
        </div>
        <div
          className="css-ungdc8-Content"
        >
          Some text
        </div>
        <div
          className="css-ungdc8-Content"
        >
          Some text
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toolbar Toolbar With Tabs 1`] = `
<div
  style={
    Object {
      "border": "1px solid #eee",
      "margin": "5em auto",
      "maxWidth": "60em",
    }
  }
>
  <div
    className="css-e025bq-List"
  >
    <div
      className="css-q8crt6-ListRow"
    >
      <p>
        The dividers don't nest so if you have tabs inside a toolbar the tabs won't get dividers
      </p>
    </div>
    <div
      className="css-6dhis2-ListRow"
    >
      <div
        className="css-1ae10t4-Toolbar"
      >
        <ul
          className="css-uydjkm-WithDividers"
          data-contains-divider={true}
        >
          <li
            className="css-tq0oo4"
          >
            <ul
              className="css-uydjkm-WithDividers"
              data-contains-divider={true}
            >
              <li
                className="css-tq0oo4"
              >
                <button
                  className="css-8zi662-Tab"
                  onClick={[Function]}
                >
                  First
                </button>
              </li>
              <li
                className="css-tq0oo4"
              >
                <div
                  aria-hidden={true}
                  className="css-6aw4lc-Divider"
                  data-is-divider={true}
                />
                <button
                  className="css-8zi662-Tab"
                  onClick={[Function]}
                >
                  Second
                </button>
              </li>
              <li
                className="css-tq0oo4"
              >
                <div
                  aria-hidden={true}
                  className="css-6aw4lc-Divider"
                  data-is-divider={true}
                />
                <button
                  className="css-141niuh-Tab"
                  onClick={[Function]}
                >
                  Third
                </button>
              </li>
            </ul>
          </li>
          <li
            className="css-1t44jqq"
          >
            <div
              aria-hidden={true}
              className="css-u594xb-Divider"
              data-is-divider={true}
            />
            <ul
              className="css-uydjkm-WithDividers"
              data-contains-divider={true}
            >
              <li
                className="css-tq0oo4"
              >
                <button
                  className="css-8zi662-Tab"
                  onClick={[Function]}
                >
                  First
                </button>
              </li>
              <li
                className="css-tq0oo4"
              >
                <div
                  aria-hidden={true}
                  className="css-6aw4lc-Divider"
                  data-is-divider={true}
                />
                <button
                  className="css-8zi662-Tab"
                  onClick={[Function]}
                >
                  Second
                </button>
              </li>
              <li
                className="css-tq0oo4"
              >
                <div
                  aria-hidden={true}
                  className="css-6aw4lc-Divider"
                  data-is-divider={true}
                />
                <button
                  className="css-141niuh-Tab"
                  onClick={[Function]}
                >
                  Third
                </button>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="css-6dhis2-ListRow"
    >
      <div
        className="css-yyqua-Toolbar"
      >
        <ul
          className="css-uydjkm-WithDividers"
          data-contains-divider={true}
        >
          <li
            className="css-tq0oo4"
          >
            <ul
              className="css-uydjkm-WithDividers"
              data-contains-divider={true}
            >
              <li
                className="css-tq0oo4"
              >
                <button
                  className="css-8zi662-Tab"
                  onClick={[Function]}
                >
                  First
                </button>
              </li>
              <li
                className="css-tq0oo4"
              >
                <div
                  aria-hidden={true}
                  className="css-6aw4lc-Divider"
                  data-is-divider={true}
                />
                <button
                  className="css-8zi662-Tab"
                  onClick={[Function]}
                >
                  Second
                </button>
              </li>
              <li
                className="css-tq0oo4"
              >
                <div
                  aria-hidden={true}
                  className="css-6aw4lc-Divider"
                  data-is-divider={true}
                />
                <button
                  className="css-141niuh-Tab"
                  onClick={[Function]}
                >
                  Third
                </button>
              </li>
            </ul>
          </li>
          <li
            className="css-1t44jqq"
          >
            <div
              aria-hidden={true}
              className="css-u594xb-Divider"
              data-is-divider={true}
            />
            <ul
              className="css-uydjkm-WithDividers"
              data-contains-divider={true}
            >
              <li
                className="css-tq0oo4"
              >
                <button
                  className="css-8zi662-Tab"
                  onClick={[Function]}
                >
                  First
                </button>
              </li>
              <li
                className="css-tq0oo4"
              >
                <div
                  aria-hidden={true}
                  className="css-6aw4lc-Divider"
                  data-is-divider={true}
                />
                <button
                  className="css-8zi662-Tab"
                  onClick={[Function]}
                >
                  Second
                </button>
              </li>
              <li
                className="css-tq0oo4"
              >
                <div
                  aria-hidden={true}
                  className="css-6aw4lc-Divider"
                  data-is-divider={true}
                />
                <button
                  className="css-141niuh-Tab"
                  onClick={[Function]}
                >
                  Third
                </button>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="css-6dhis2-ListRow"
    >
      <div
        className="css-1s856wh-Toolbar"
      >
        <ul
          className="css-uydjkm-WithDividers"
          data-contains-divider={true}
        >
          <li
            className="css-tq0oo4"
          >
            <ul
              className="css-uydjkm-WithDividers"
              data-contains-divider={true}
            >
              <li
                className="css-tq0oo4"
              >
                <button
                  className="css-8zi662-Tab"
                  onClick={[Function]}
                >
                  First
                </button>
              </li>
              <li
                className="css-tq0oo4"
              >
                <div
                  aria-hidden={true}
                  className="css-6aw4lc-Divider"
                  data-is-divider={true}
                />
                <button
                  className="css-8zi662-Tab"
                  onClick={[Function]}
                >
                  Second
                </button>
              </li>
              <li
                className="css-tq0oo4"
              >
                <div
                  aria-hidden={true}
                  className="css-6aw4lc-Divider"
                  data-is-divider={true}
                />
                <button
                  className="css-141niuh-Tab"
                  onClick={[Function]}
                >
                  Third
                </button>
              </li>
            </ul>
          </li>
          <li
            className="css-1t44jqq"
          >
            <div
              aria-hidden={true}
              className="css-u594xb-Divider"
              data-is-divider={true}
            />
            <ul
              className="css-uydjkm-WithDividers"
              data-contains-divider={true}
            >
              <li
                className="css-tq0oo4"
              >
                <button
                  className="css-8zi662-Tab"
                  onClick={[Function]}
                >
                  First
                </button>
              </li>
              <li
                className="css-tq0oo4"
              >
                <div
                  aria-hidden={true}
                  className="css-6aw4lc-Divider"
                  data-is-divider={true}
                />
                <button
                  className="css-8zi662-Tab"
                  onClick={[Function]}
                >
                  Second
                </button>
              </li>
              <li
                className="css-tq0oo4"
              >
                <div
                  aria-hidden={true}
                  className="css-6aw4lc-Divider"
                  data-is-divider={true}
                />
                <button
                  className="css-141niuh-Tab"
                  onClick={[Function]}
                >
                  Third
                </button>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="css-6dhis2-ListRow"
    >
      <div
        className="css-1ycjblk-Toolbar"
      >
        <ul
          className="css-uydjkm-WithDividers"
          data-contains-divider={true}
        >
          <li
            className="css-tq0oo4"
          >
            <button
              className="css-8zi662-Tab"
              onClick={[Function]}
            >
              First
            </button>
          </li>
          <li
            className="css-tq0oo4"
          >
            <div
              aria-hidden={true}
              className="css-6aw4lc-Divider"
              data-is-divider={true}
            />
            <button
              className="css-8zi662-Tab"
              onClick={[Function]}
            >
              Second
            </button>
          </li>
          <li
            className="css-tq0oo4"
          >
            <div
              aria-hidden={true}
              className="css-6aw4lc-Divider"
              data-is-divider={true}
            />
            <button
              className="css-141niuh-Tab"
              onClick={[Function]}
            >
              Third
            </button>
          </li>
        </ul>
        <ul
          className="css-uydjkm-WithDividers"
          data-contains-divider={true}
        >
          <li
            className="css-tq0oo4"
          >
            <button
              className="css-8zi662-Tab"
              onClick={[Function]}
            >
              First
            </button>
          </li>
          <li
            className="css-tq0oo4"
          >
            <div
              aria-hidden={true}
              className="css-6aw4lc-Divider"
              data-is-divider={true}
            />
            <button
              className="css-8zi662-Tab"
              onClick={[Function]}
            >
              Second
            </button>
          </li>
          <li
            className="css-tq0oo4"
          >
            <div
              aria-hidden={true}
              className="css-6aw4lc-Divider"
              data-is-divider={true}
            />
            <button
              className="css-141niuh-Tab"
              onClick={[Function]}
            >
              Third
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Type Type 1`] = `
<div
  style={
    Object {
      "border": "1px solid #eee",
      "margin": "5em auto",
      "maxWidth": "60em",
    }
  }
>
  <div
    className="css-e025bq-List"
  >
    <div
      className="css-q8crt6-ListRow"
    >
      <h2
        className="css-82xfaz-SectionHeader"
      >
        Title
      </h2>
    </div>
    <div
      className="css-q8crt6-ListRow"
    >
      <span
        className="css-f0hvcz-Explainer"
      >
        Small explainer text
      </span>
    </div>
    <div
      className="css-q8crt6-ListRow"
    >
      Normal text
    </div>
  </div>
</div>
`;
